@@ -1,9 +1,9 @@
 package use_case.login;
 
-import entity.SubAccount;
-
 import java.util.Collections;
 import java.util.List;
+
+import entity.SubAccount;
 
 /**
  * Output Data for the Login Use Case.
@@ -13,15 +13,15 @@ public class LoginOutputData {
     private final String username;
     private final List<SubAccount> subAccounts;
 
-    public LoginOutputData(String username) {
+    public LoginOutputData(final String username) {
         this(username, Collections.emptyList());
     }
 
-    public LoginOutputData(String username, List<SubAccount> subAccounts) {
+    public LoginOutputData(final String username, final List<SubAccount> subAccounts) {
         this.username = username;
         this.subAccounts = subAccounts == null
-                ? Collections.emptyList()
-                : List.copyOf(subAccounts);
+            ? Collections.emptyList()
+            : List.copyOf(subAccounts);
     }
 
     public String getUsername() {
